# django-prod

./: .env.template  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/shopapp/: views.py
mysite/shopapp/templates/shopapp/: products-details.html
